--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-node_modules
+# Node
+node_modules/
+package-lock.json
+pnpm-lock.yaml
+
+# Build
+dist/
+apps/*/dist/
+packages/*/dist/
+
+# IDE
+.vscode/
+.DS_Store
