--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "singleQuote": true,
   "semi": true,
+  "singleQuote": true,
   "trailingComma": "all",
   "printWidth": 100,
   "tabWidth": 2,
-  "endOfLine": "lf"
+  "arrowParens": "always",
+  "endOfLine": "auto"
 }
