--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bookmarker",
   "private": true,
+  "type": "module",
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -8,9 +9,23 @@
   "packageManager": "npm@11.6.2",
   "scripts": {
     "dev": "turbo run dev --parallel",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "lint:backend": "eslint apps/backend/src --ext .ts,.tsx --fix",
+    "lint:frontend": "eslint apps/frontend/src --ext .ts,.tsx --fix",
+    "lint:shared": "eslint packages/shared/src --ext .ts,.tsx --fix",
+    "lint": "npm run lint:backend && npm run lint:frontend && npm run lint:shared",
+    "format": "prettier --write ."
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.2.0",
+    "prettier": "^3.6.2",
     "turbo": "latest",
     "typescript": "^5.6.3"
   }
