--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint:frontend": "eslint apps/frontend/src --ext .ts,.tsx --fix",
     "lint:shared": "eslint packages/shared/src --ext .ts,.tsx --fix",
     "lint": "npm run lint:backend && npm run lint:frontend && npm run lint:shared",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.46.0",
@@ -25,8 +26,16 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.4",
     "prettier": "^3.6.2",
     "turbo": "latest",
     "typescript": "^5.6.3"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,css,scss,html,md}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
