--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "sass": "^1.93.2"
   }
 }
