--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,8 +26,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.17.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "winston": "^3.18.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
