--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -21,7 +21,8 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "baseUrl": "."
   },
   "include": ["src"],
   "references": [{ "path": "../../packages/shared" }]
