--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "cucumber-js --require-module ts-node/register --require tests/e2e/**/*.ts --format progress tests/e2e/features/**/*.feature"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -32,10 +34,15 @@
     "@prisma/client": "^6.17.1",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.63.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
+    "mq": "^0.0.0",
     "nest-winston": "^1.10.2",
+    "nodemailer": "^7.0.10",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
