--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,7 +31,8 @@
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/throttler": "^6.4.0",
-    "@prisma/client": "^6.17.1",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^6.19.1",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.63.0",
@@ -66,7 +67,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.17.1",
+    "prisma": "^6.19.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.4",
     "ts-jest": "^29.2.5",
