feat: imports aliases, configs

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -22,7 +22,10 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@frontend/*": ["src/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "../../packages/shared" }]
