--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "lint-staged": "^16.2.4",
     "prettier": "^3.6.2",
     "turbo": "latest",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vite-tsconfig-paths": "^6.0.3"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,css,scss,html,md}": [
