--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,6 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".",
-    "paths": {
-      "@savely/shared": ["packages/shared/src"]
-    }
+    "forceConsistentCasingInFileNames": true
   }
 }
